--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,11 @@
   },
 
   // Add the IDs of extensions you want installed when the container is created.
-  "extensions": ["esbenp.prettier-vscode", "ms-python.python"]
+  "extensions": [
+    "esbenp.prettier-vscode",
+    "ms-python.python",
+    "ms-vsliveshare.vsliveshare"
+  ]
 
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
   // "forwardPorts": [],
