--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,11 +15,7 @@
   },
 
   // Add the IDs of extensions you want installed when the container is created.
-  "extensions": [
-    "esbenp.prettier-vscode",
-    "ms-python.python",
-    "ms-vsliveshare.vsliveshare"
-  ]
+  "extensions": ["esbenp.prettier-vscode", "ms-python.python"]
 
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
   // "forwardPorts": [],
