--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "python.pythonPath": "C:\\Users\\Saad\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
+  "python.pythonPath": "/usr/local/bin/python"
 }
